# logic/internal/server/http.go
@@ -1,0 +1,35 @@
+package server
+
+import (
+	v1 "api/logic/v1"
+	"logic/internal/conf"
+	"logic/internal/service"
+
+	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/middleware/tracing"
+	"github.com/go-kratos/kratos/v2/transport/http"
+)
+
+// NewHTTPServer new an HTTP server.
+func NewHTTPServer(cb *conf.Bootstrap, svc *service.LogicService, logger log.Logger) *http.Server {
+	c := cb.Server
+	var opts = []http.ServerOption{
+		http.Middleware(
+			recovery.Recovery(),
+			tracing.Server(),
+		),
+	}
+	if c.Http.Network != "" {
+		opts = append(opts, http.Network(c.Http.Network))
+	}
+	if c.Http.Addr != "" {
+		opts = append(opts, http.Address(c.Http.Addr))
+	}
+	if c.Http.Timeout != nil {
+		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
+	}
+	srv := http.NewServer(opts...)
+	v1.RegisterLogicServiceHTTPServer(srv, svc)
+	return srv
+}
